# autonomous-red-team-agent

./: .env.example  .gitignore  README.md  pyproject.toml
MHBench/: CLAUDE.md  README.md  findings.md  host.md  table.md
artifacts/: estimate_tokens.py  main.py  pyproject.toml
be/: .env.example  .gitignore  README.md  main.py  pyproject.toml
be/docs/: architecture.md
be/examples/: engagement-topology.example.yaml
be/runner/: README.md  policy.py  server.py
be/src/agent_redteam/: __init__.py  simple_react.py
be/src/agent_redteam/agents/: __init__.py  base.py  loop.py
be/src/agent_redteam/cli/: keyboard.py  live_input.py  main.py  prompt.py  render.py  slash.py
be/src/agent_redteam/core/: __init__.py  audit.py  config.py  exceptions.py  logging.py
be/src/agent_redteam/execution/: __init__.py  bootstrap.py  remote.py  run_on_host.py  runner.py  ssh.py
be/src/agent_redteam/guardrails/: __init__.py
be/src/agent_redteam/llm/: claude.py  openai.py  openai_chat.py  usage.py
be/src/agent_redteam/orchestration/: workflow.py
be/src/agent_redteam/prompts/: __init__.py  system.md
be/src/agent_redteam/targets/: __init__.py  state.py  store.py  topology.py
be/src/agent_redteam/tools/: __init__.py  bash.py  exec.py  fake.py  finish.py  grep.py  registry.py  schemas.py  topology.py
be/tests/: test_agent_loop.py  test_autonomous.py  test_chat_completions.py  test_config.py  test_engagement_state.py  test_exec.py  test_expand.py  test_grep.py  test_observability.py  test_provider_live.py  test_simple_react.py  test_slash_commands.py  test_topology_store.py  test_topology_tools.py  test_usage.py
docs/: architecture.md  authorized-use.md
fe/: .prettierignore  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
harness/: .prettierignore  .prettierrc.json  README.md  pyproject.toml
incalmo/: AGENTS.md  README.md  guide.md  incalmo-actions.excalidraw  incalmo-architecture.excalidraw  incalmo-for-students.excalidraw  incalmo-highlevel-actions.excalidraw  (+6 more)
(+312 files in other folders)
