[project]
name = "agent-redteam"
version = "0.1.0"
description = "Agentic red teaming framework for authorized security assessments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer>=0.15",
]

[project.scripts]
redteam = "agent_redteam.cli.main:app"

[dependency-groups]
dev = [{ include-group = "lint" }]
lint = ["ruff>=0.9", "ty>=0.0.1a20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_redteam"]

[tool.hatch.build.targets.sdist]
only-include = ["src/agent_redteam"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["D"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]
