[project]
name = "agent-redteam"
version = "0.1.0"
description = "Agentic red teaming framework for authorized security assessments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.1",
    "openai>=2.38.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "rich>=13.0",
    "typer>=0.15",
]

[project.scripts]
redteam = "agent_redteam.cli.main:app"
"main.py" = "agent_redteam.simple_react:main"

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["ruff>=0.9", "ty>=0.0.1a20"]
test = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_redteam"]

[tool.hatch.build.targets.sdist]
only-include = ["src/agent_redteam"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["D"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]
